--- a/src/Components/CartBag/CartBag.css
+++ b/src/Components/CartBag/CartBag.css
@@ -5,7 +5,6 @@
   font-weight: 700;
   font-family: "Raleway", sans-serif;
 }
-
 .cart-bag ul .cart-item {
   padding: 20px 0;
   width: 100%;
@@ -15,10 +14,14 @@
 .cart-bag ul .item-details .product-name {
   font-size: 30px;
 }
+
 .cart-bag ul .item-details .product-price {
   margin: 26px 0;
   font-size: 24px;
   font-weight: 700;
+}
+.cart-bag ul .item-details .item-options__option .attribute-name {
+  font-size: 20px;
 }
 .cart-bag ul .item-details .item-options__option .user-option,
 .cart-bag ul .item-details .item-options__option .second-option {
@@ -42,7 +45,7 @@
 }
 .cart-bag ul .item-details .item-options__option .color-user-option {
   padding: 1px;
-  border: 2px solid #ffffff;
+  border: 4px solid #ffffff;
   outline: 2px solid #1d1f22;
   order: 1;
   margin-left: 12px;
@@ -74,3 +77,4 @@
 .cart-bag ul .item-gallery .img-gallery .img-slider figure{
   cursor: pointer;
 }
+
