--- a/src/Components/product-description/ProductDescription.css
+++ b/src/Components/product-description/ProductDescription.css
@@ -52,12 +52,12 @@
 /* color attributes */
 .Color {
   border: none !important;
-  box-shadow: 0px 4px 20px rgba(144, 144, 145, 0.19);
+  box-shadow: 0px 8px 20px rgba(144, 144, 145, 0.19);
 }
 .Color:hover,
 .selected-color {
   padding: 1px;
-  border: 2px solid #ffffff !important;
+  border: 4px solid #ffffff !important;
   outline: 2px solid #1d1f22;
   cursor: pointer;
 }
@@ -94,6 +94,9 @@
   font-size: 16px;
   line-height: 25.59px;
   margin-bottom: 40px;
+}
+.product-details .product-description ul li {
+  list-style: disc !important;
 }
 /* product image gallery */
 .image-gallery {
